# risk-detector

./: .gitignore  ENV_CONFIG.md  METRICAS_RISK_DETECTOR.docx  README.md  START.bat  diagnostico.py  generate_presentation.py  juntar_planilhas.py  pyproject.toml  run.py  ~$TRICAS_RISK_DETECTOR.docx
src/risk_detector_ai/: __init__.py  app.py  features.py  model_trainer.py  models.py  routes.py  train.py  train_oneclass.py
src/risk_detector_ai/data/data_teste/: apostas_sportsbook_teste.csv
src/risk_detector_ai/data/data_treino/: jogadores.csv  markets.csv
src/risk_detector_ai/static/: reset.css  style.css
src/risk_detector_ai/static/css/: dark_theme.css  style.css
src/risk_detector_ai/templates/: analyses.html  analysis_view.html  base.html  index.html  results.html  results_list.html  upload.html
